@@ -2,13 +2,14 @@ package pl.private_programing_barman.service;
 
 import org.springframework.stereotype.Service;
 import pl.private_programing_barman.dto.IngredientDto;
+import pl.private_programing_barman.dto.IngredientToSaveDto;
+import pl.private_programing_barman.mapper.IngredientDtoMapper;
 import pl.private_programing_barman.model.Ingredient;
 import pl.private_programing_barman.repositories.IngredientRepository;
 
 import javax.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class IngredientService {
@@ -19,12 +20,12 @@ public class IngredientService {
     }
 
     @Transactional
-    public void add(IngredientDto newIngredient){
-        Ingredient ingredient = new Ingredient(
-                newIngredient.getName(),
-                newIngredient.getDescription(),
-                newIngredient.getQuantity(),
-                newIngredient.getuOm());
+    public void add(IngredientToSaveDto newIngredient){
+        Ingredient ingredient = new Ingredient();
+        ingredient.setName(newIngredient.getName());
+        ingredient.setDescription(newIngredient.getDescription());
+        ingredient.setuOm(newIngredient.getuOm());
+        ingredient.setQuantity(newIngredient.getQuantity());
         ingredientrepository.save(ingredient);
     }
 
@@ -35,16 +36,12 @@ public class IngredientService {
 
     @Transactional
     public List<IngredientDto> findAllIngredients(){
-        return ingredientrepository.findAll().stream().map(ingredient -> new IngredientDto(
-                ingredient.getName(),
-                ingredient.getDescription(),
-                ingredient.getQuantity(),
-                ingredient.getuOm()
-        )).collect(Collectors.toList());
+        return ingredientrepository.findAll().stream()
+                .map(IngredientDtoMapper::map)
+                .toList();
     }
 
 
-    //nie wiem jak to rozwiązać żeby przez servcie mieć dostęp do DTO a nie do Encji!!!
     @Transactional
     public Optional<Ingredient> findById(int ingredientId){
         return ingredientrepository.findById(ingredientId);
